--- a/tasks/verify.yml
+++ b/tasks/verify.yml
@@ -2,7 +2,9 @@
 # Role verify tasks
 
 - block:
-    - name: Verify that application was deployed correctly
+    - meta: flush_handlers
+
+    - name: Check application deployment in tomcat manager
       uri:
         url: "{{ tomcat_application_manager.0.url }}/manager/text/list"
         method: GET
@@ -11,6 +13,7 @@
         return_content: yes
         timeout: "{{ tomcat_application_manager.0.timeout | default(3) }}"
       register: tomcat_application_manager_result
+      failed_when: no
       retries: "{{ tomcat_application_manager.0.retries | default(0) }}"
       delay: "{{ tomcat_application_manager.0.delay | default(0) }}"
       until: >-
@@ -27,6 +30,20 @@
           {{ tomcat_application_managers
              | selectattr("instance", "equalto", tomcat_application_instance)
              | list }}
+
+    - name: Assert that application was deployed correctly
+      assert:
+        that: tomcat_application_item.state == "running"
+        success_msg: >-
+          Application {{ tomcat_application_name }} correctly deployed in
+          {{ tomcat_application_item.instance }} instance
+        fail_msg: >-
+          Application {{ tomcat_application_name }} failed to deploy in
+          {{ tomcat_application_item.instance }} instance
+      loop: "{{ lookup('template', 'verify.yml.j2') | from_yaml }}"
+      loop_control:
+        loop_var: tomcat_application_item
+        label: "{{ tomcat_application_item.instance }}"
   tags:
     - role::tomcat_application
     - role::tomcat_application::verify
