--- a/meta/main.yml
+++ b/meta/main.yml
@@ -40,15 +40,26 @@ dependencies:
     vars:
       packages_os:
         centos:
-          all:
+          6:
+            python-lxml: absent
+          7:
             python-lxml: present
         fedora:
           all:
             python2-lxml: present
             python3-lxml: present
         rhel:
-          all:
+          6:
+            python-lxml: abbsent
+          7:
             python-lxml: present
+      packages_python:
+        centos:
+          6:
+            lxml==4.2.6: present
+        rhel:
+          6:
+            lxml==4.2.6: present  
 
   - role: amtega.artifact
     when: no
