--- a/tasks/verify.yml
+++ b/tasks/verify.yml
@@ -4,7 +4,7 @@
 - block:
     - meta: flush_handlers
 
-    - name: Check application deployment in tomcat manager
+    - name: Verify application deployment in tomcat manager
       uri:
         url: "{{ tomcat_application_manager.0.url }}/manager/text/list"
         method: GET
@@ -33,12 +33,14 @@
 
     - name: Assert that application was deployed correctly
       assert:
-        that: tomcat_application_item.state == "running"
+        that: tomcat_application_item.state == tomcat_application_state
         success_msg: >-
-          Application {{ tomcat_application_name }} correctly deployed in
-          {{ tomcat_application_item.instance }} instance
+          Application {{ tomcat_application_name }}
+          {{ tomcat_application_state }}
+          in {{ tomcat_application_item.instance }} instance
         fail_msg: >-
-          Application {{ tomcat_application_name }} failed to deploy in
+          Application {{ tomcat_application_name }} failed to be
+          {{ tomcat_application_state }} in
           {{ tomcat_application_item.instance }} instance
       loop: "{{ lookup('template', 'verify.yml.j2') | from_yaml }}"
       loop_control:
