--- a/tests/main.yml
+++ b/tests/main.yml
@@ -23,6 +23,21 @@
       tomcat_name: tomcat@server1
       tomcat_base: /srv/tomcat/tomcat@server1
       tomcat_version: 8.0.9
+      tomcat_cms_roles:
+        - manager-gui
+        - admin-gui
+        - manager-script
+        - manager-jmx
+        - manager-status
+      tomcat_cms_users:
+        - username: admin
+          password: admin
+          roles:
+            - admin-gui
+            - manager-gui
+            - manager-script
+            - manager-jmx
+            - manager-status
 
     - role: amtega.tomcat
       tomcat_name: tomcat@server2
@@ -33,34 +48,22 @@
       tomcat_server_http_port: 8081
       tomcat_server_https_port: 8444
       tomcat_server_ajp_port: 8010
+      tomcat_cms_roles:
+        - manager-gui
+        - admin-gui
+        - manager-script
+        - manager-jmx
+        - manager-status
+      tomcat_cms_users:
+        - username: admin
+          password: admin
+          roles:
+            - admin-gui
+            - manager-gui
+            - manager-script
+            - manager-jmx
+            - manager-status
   tasks:
-    - name: Configure tomcat users
-      copy:
-        dest: "/srv/tomcat/tomcat@{{ item }}/conf/tomcat-users.xml"
-        content: >-
-          <tomcat-users>
-            <role rolename="admin-gui"/>
-            <role rolename="manager-gui"/>
-            <role rolename="manager-jmx"/>
-            <role rolename="manager-script"/>
-            <role rolename="manager-status"/>
-            <user username="admin"
-                  password="admin"
-                  roles="admin-gui,manager-gui,manager-script,manager-jmx,
-                         manager-status"/>
-          </tomcat-users>
-      loop:
-        - server1
-        - server2
-
-    - name: Restart tomcat servers
-      service:
-        name: "tomcat@{{ item }}"
-        state: restarted
-      loop:
-        - server1
-        - server2
-
     - name: Download sample application
       get_url:
         url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
@@ -255,7 +258,7 @@
   roles:
     - role: amtega.tomcat_application
   vars:
-    tomcat_application_name: myapp
+    tomcat_application_name: sample
     tomcat_application_instances:
       - tomcat@server1
       - tomcat@server2
