--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,7 +9,7 @@ galaxy_info:
     and directories
   company: AMTEGA - Xunta de Galicia
   license: GPLv3 or EUPL
-  min_ansible_version: 2.7
+  min_ansible_version: 2.8
   platforms:
     - name: EL
       versions:
@@ -17,8 +17,8 @@ galaxy_info:
         - 7
     - name: Fedora
       versions:
-        - 27
-        - 28
+        - 29
+        - 30
   galaxy_tags:
     - tomcat
     - jee
@@ -28,38 +28,13 @@ galaxy_info:
 
 dependencies:
   - role: amtega.check_platform
-    vars:
-      check_platform_distributions:
-        centos: 6
-        fedora: 27
-        rhel: 6
-      check_platform_variables:
-        - tomcat_application_name
+    tags:
+      - never
 
   - role: amtega.packages
-    vars:
-      packages_os:
-        centos:
-          6:
-            python-lxml: absent
-          7:
-            python-lxml: present
-        fedora:
-          all:
-            python2-lxml: present
-            python3-lxml: present
-        rhel:
-          6:
-            python-lxml: abbsent
-          7:
-            python-lxml: present
-      packages_python:
-        centos:
-          6:
-            lxml==4.2.6: present
-        rhel:
-          6:
-            lxml==4.2.6: present
+    tags:
+      - never
 
   - role: amtega.artifact
-    when: no
+    tags:
+      - never
