--- a/tasks/artifacts.yml
+++ b/tasks/artifacts.yml
@@ -47,17 +47,17 @@
       loop: >-
         {{ query("nested",
                  tomcat_application_server_instances,
-                 tomcat_application_artifacts) }}
+                 tomcat_application_webapps_artifacts) }}
       loop_control:
         loop_var: tomcat_application_item
         label: >-
           {{ tomcat_application_item.0.base
              + "/webapps/"
-             + (tomcat_application_item.1.dest_file | splitext).0 }}
+             + tomcat_application_item.1 }}
       notify:
         - shutdown tomcat instance
       vars:
-        tomcat_application_artifacts:
+        tomcat_application_webapps_artifacts:
           - "{{ tomcat_application_name }}"
           - "{{ tomcat_application_name }}.war"
 
