--- a/tasks/datasources.yml
+++ b/tasks/datasources.yml
@@ -2,7 +2,7 @@
 # Tasks to setup application dirs
 
 - block:
-    - name: Setup fact with templated to data sources
+    - name: Setup fact with templated datasources
       set_fact:
         tomcat_application_datasources_deployed: >-
           {{ tomcat_application_datasources_deployed | default([])
