--- a/tasks/artifacts.yml
+++ b/tasks/artifacts.yml
@@ -2,65 +2,12 @@
 # Tasks to setup application artifacts
 
 - block:
-    - name: Setup fact with application artifacts
-      set_fact:
-        tomcat_artifacts_deployed: >-
-          {{ lookup('template', 'artifacts.yml.j2') | from_yaml }}
+    - include_tasks: artifacts_fact.yml
+    - include_tasks: artifacts_deploy.yml
+    - include_tasks: artifacts_restart.yml
 
-    - name: Deploy tomcat application artifacts
-      include_role:
-        name: amtega.artifact
-      vars:
-        artifact_list: "{{ tomcat_artifacts_deployed }}"
-
-    - name: Determining if it is necessary to restart the tomcat service
-      command: /bin/true
-      changed_when:
-        - artifact_result_item.changed
-        - not tomcat_application_item.0.autodeploy
-      loop: >-
-        {{ query('nested',
-                 tomcat_application_server_instances,
-                 tomcat_artifacts_deployed) }}
-      loop_control:
-        loop_var: tomcat_application_item
-        label: >-
-          {{ tomcat_application_item.0.base }}
-          {{ tomcat_application_item.1.id }}
-      notify:
-        - shutdown tomcat instance
-      vars:
-        artifact_result_item: >-
-          {{ artifact_result[tomcat_application_item.1.id] }}
-
-    - name: Remove tomcat application webapps artifacts
-      file:
-        path: >-
-          {{ tomcat_application_item.0.base
-             + "/webapps/"
-             + (tomcat_application_item.1.dest_file | splitext).0 }}
-        state: absent
-      register: tomcat_application_undeploy_artifacts_dirs_result
-      when:
-        - not tomcat_application_item.0.autodeploy
-        - tomcat_application_state == "absent"
-      loop: >-
-        {{ query("nested",
-                 tomcat_application_server_instances,
-                 tomcat_application_webapps_artifacts) }}
-      loop_control:
-        loop_var: tomcat_application_item
-        label: >-
-          {{ tomcat_application_item.0.base
-             + "/webapps/"
-             + tomcat_application_item.1 }}
-      notify:
-        - shutdown tomcat instance
-      vars:
-        tomcat_application_webapps_artifacts:
-          - "{{ tomcat_application_name }}"
-          - "{{ tomcat_application_name }}.war"
-
+    - include_tasks: artifacts_remove.yml
+      when: tomcat_application_state == "absent"
   tags:
     - role::tomcat_application
     - role::tomcat_application::artifacts
