--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -3,63 +3,6 @@
 - name: Prepare
   hosts: molecule_hosts
   gather_facts: no
-  roles:
-    - role: amtega.tomcat
-      vars:
-        tomcat_name: tomcat@server1
-        tomcat_base: /srv/tomcat/tomcat@server1
-        tomcat_version: 8.0.9
-        tomcat_use_native_daemon: yes
-        tomcat_server_port: 8006
-        tomcat_server_http_port: 8080
-        tomcat_server_https_port: 8443
-        tomcat_server_ajp_port: 8009
-        tomcat_cms_roles:
-          - manager-gui
-          - admin-gui
-          - manager-script
-          - manager-jmx
-          - manager-status
-        tomcat_cms_users:
-          - username: admin
-            password: admin
-            roles:
-              - admin-gui
-              - manager-gui
-              - manager-script
-              - manager-jmx
-              - manager-status
-
-    - role: amtega.tomcat
-      vars:
-        tomcat_name: tomcat@server2
-        tomcat_base: /srv/tomcat/tomcat@server2
-        tomcat_version: 8.0.9
-        tomcat_use_native_daemon: no
-        tomcat_server_port: 8006
-        tomcat_server_http_port: 8081
-        tomcat_server_https_port: 8444
-        tomcat_server_ajp_port: 8010
-        tomcat_cms_roles:
-          - manager-gui
-          - admin-gui
-          - manager-script
-          - manager-jmx
-          - manager-status
-        tomcat_cms_users:
-          - username: admin
-            password: admin
-            roles:
-              - admin-gui
-              - manager-gui
-              - manager-script
-              - manager-jmx
-              - manager-status
-
   tasks:
-    - name: Download sample application
-      get_url:
-        url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
-        dest: /tmp/sample2.war
-        validate_certs: false
-        timeout: 60
+    - include_tasks: ../resources/tomcat.yml
+    - include_tasks: ../resources/war.yml
