--- a/tasks/directories.yml
+++ b/tasks/directories.yml
@@ -36,6 +36,7 @@
         loop_var: tomcat_application_item
         label: >-
           {{ tomcat_application_item.0.base }}/{{ tomcat_application_item.1 }}
+      ignore_errors: "{{ tomcat_application_dirs_remove_ignore_errors }}"
   tags:
     - role::tomcat_application
     - role::tomcat_application::directories
