--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,9 +4,7 @@
 galaxy_info:
   role_name: tomcat_application
   author: Juan Antonio Valiño García
-  description: >-
-    Deploy applications in tomcat instances configuring also datasources
-    and directories
+  description: Deploy a tomcat application and its datasources and directories
   company: AMTEGA - Xunta de Galicia
   license: GPLv3 or EUPL
   min_ansible_version: 2.9
